# app/Models/INeedPost.php
@@ -1,0 +1,25 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+
+class INeed extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'post_title',
+        'post_short_description',
+        'post_image',
+        'post_price',
+        'post_price_type',
+        'post_status'
+    ];
+
+    // Define any relationships here. For example:
+    // public function user() {
+    //     return $this->belongsTo(User::class);
+    // }
+}
